--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "carreseller_proxy",
   "version": "1.0.0",
   "main": "server.js",
+  "engines": {
+    "node": "12.1.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
